// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Access Point Wizard Tests fill form and submit without error 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-aws"
        >
          <svg
            height="40"
            viewBox="0 0 14 10"
            width="40"
          >
            <path
              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
              fill="#252f3e"
            />
            <g
              fill="#f90"
            >
              <path
                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
              />
              <path
                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Create New Access Point
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.create
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.mapDomain
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-large"
        style="min-height: 640px; width: 55%;"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          ce.co.accessPoint.create
        </h2>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 640px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="accessPointName-0"
                >
                  <label
                    class="bp3-label"
                    for="accessPointName"
                  >
                    ce.co.accessPoint.enterDomain
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="accessPointName"
                        placeholder="ce.co.accessPoint.domainName"
                        type="text"
                        value="newloadbalancer.lightwingtest.com"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-1"
                >
                  <label
                    class="bp3-label"
                  >
                    ce.co.accessPoint.select.connector
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main container"
                      data-testid="cr-field-cloudConnector"
                      style="width: 400px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          ce.co.accessPoint.select.account
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="accessPointRegion-2"
                >
                  <label
                    class="bp3-label"
                    for="accessPointRegion"
                  >
                    ce.co.accessPoint.select.regionToInstall
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="accessPointRegion"
                            placeholder="ce.co.accessPoint.select.region"
                            style="padding-right: 0px;"
                            type="text"
                            value="ap-southeast-1"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group radioFont"
                      data-id="albSelector-3"
                      style="font-size: 24px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="radioFont"
                        >
                          <label
                            class="bp3-control bp3-radio bp3-inline Radio--radio"
                          >
                            <input
                              name="albSelector"
                              type="radio"
                              value="new"
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            ce.co.accessPoint.createNewALB
                          </label>
                          <label
                            class="bp3-control bp3-radio bp3-inline Radio--radio"
                          >
                            <input
                              name="albSelector"
                              type="radio"
                              value=""
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="apCores-4"
                      style="width: 220px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="apCores"
                                placeholder="ce.co.accessPoint.select.existingALB"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="certificate-5"
                >
                  <label
                    class="bp3-label"
                    for="certificate"
                  >
                    ce.co.accessPoint.select.aCertificate
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="certificate"
                            placeholder="ce.co.accessPoint.select.certificate"
                            style="padding-right: 0px;"
                            type="text"
                            value="*.lightwingtest.com"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      >
                        <div
                          class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                          style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                        >
                          <div
                            class="bp3-popover bp3-minimal bp3-select-popover"
                            style="transform-origin: center top;"
                          >
                            <div
                              class="bp3-popover-content"
                            >
                              <div>
                                <ul
                                  class="bp3-menu"
                                >
                                  <li
                                    class="Select--menuItem Select--active"
                                  >
                                    *.lightwingtest.com
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="vpc-6"
                >
                  <label
                    class="bp3-label"
                    for="vpc"
                  >
                    ce.co.accessPoint.select.vpc
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="vpc"
                            placeholder="ce.co.accessPoint.select.vpc"
                            style="padding-right: 0px;"
                            type="text"
                            value="testvpn"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      >
                        <div
                          class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                          style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                        >
                          <div
                            class="bp3-popover bp3-minimal bp3-select-popover"
                            style="transform-origin: center top;"
                          >
                            <div
                              class="bp3-popover-content"
                            >
                              <div>
                                <ul
                                  class="bp3-menu"
                                >
                                  <li
                                    class="Select--menuItem Select--active"
                                  >
                                    testvpn
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="securityGroups-7"
                >
                  <label
                    class="bp3-label"
                    for="securityGroups"
                  >
                    ce.co.accessPoint.select.securityGroups
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                name="securityGroups"
                                placeholder="Search..."
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-disabled bp3-loading StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                  disabled=""
                  style="position: absolute; bottom: 0px;"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="bp3-spinner bp3-button-spinner"
                  >
                    <div
                      class="bp3-spinner-animation"
                    >
                      <svg
                        height="20"
                        stroke-width="16.00"
                        viewBox="-3.00 -3.00 106.00 106.00"
                        width="20"
                      >
                        <path
                          class="bp3-spinner-track"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        />
                        <path
                          class="bp3-spinner-head"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          pathLength="280"
                          stroke-dasharray="280 280"
                          stroke-dashoffset="210"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="bp3-button-text"
                  >
                    ce.co.accessPoint.proceed
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Access Point Wizard Tests fill form and submit without error 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-aws"
        >
          <svg
            height="40"
            viewBox="0 0 14 10"
            width="40"
          >
            <path
              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
              fill="#252f3e"
            />
            <g
              fill="#f90"
            >
              <path
                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
              />
              <path
                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Create New Access Point
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.create
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.mapDomain
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
        style="min-height: 640px; width: 55%;"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          ce.co.accessPoint.mapDomain
        </h2>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 640px;"
              >
                <div>
                  <label
                    class="bp3-label"
                  >
                    ce.co.accessPoint.select.dnsProvider
                  </label>
                  <label
                    class="bp3-control bp3-radio bp3-inline"
                  >
                    <input
                      name="dnsProvider"
                      type="radio"
                      value="route53"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ce.co.accessPoint.route53
                  </label>
                  <label
                    class="bp3-control bp3-radio bp3-inline"
                  >
                    <input
                      checked=""
                      name="dnsProvider"
                      type="radio"
                      value="others"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ce.co.accessPoint.others
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                style="position: absolute; bottom: 0px;"
              >
                <button
                  class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                  data-testid="albFormSubmitBtn"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    ce.co.accessPoint.create
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Access Point Wizard Tests fill form and submit without error 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-aws"
        >
          <svg
            height="40"
            viewBox="0 0 14 10"
            width="40"
          >
            <path
              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
              fill="#252f3e"
            />
            <g
              fill="#f90"
            >
              <path
                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
              />
              <path
                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Create New Access Point
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.create
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.mapDomain
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
        style="min-height: 640px; width: 55%;"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          ce.co.accessPoint.mapDomain
        </h2>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 640px;"
              >
                <div>
                  <label
                    class="bp3-label"
                  >
                    ce.co.accessPoint.select.dnsProvider
                  </label>
                  <label
                    class="bp3-control bp3-radio bp3-inline"
                  >
                    <input
                      name="dnsProvider"
                      type="radio"
                      value="route53"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ce.co.accessPoint.route53
                  </label>
                  <label
                    class="bp3-control bp3-radio bp3-inline"
                  >
                    <input
                      checked=""
                      name="dnsProvider"
                      type="radio"
                      value="others"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ce.co.accessPoint.others
                  </label>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                    style="width: 80%;"
                  >
                    <label
                      class="bp3-label"
                      for="route53Account"
                    >
                      ce.co.accessPoint.select.route53zone
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="route53Account"
                              placeholder="ce.co.accessPoint.select.route53zone"
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                style="position: absolute; bottom: 0px;"
              >
                <button
                  class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                  data-testid="albFormSubmitBtn"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    ce.co.accessPoint.create
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Access Point Wizard Tests renders for rule creation mode without crashing 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-aws"
        >
          <svg
            height="40"
            viewBox="0 0 14 10"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
              fill="#252f3e"
            />
            <g
              fill="#f90"
            >
              <path
                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
              />
              <path
                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Create New Access Point
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.create
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.mapDomain
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-large"
        style="min-height: 640px; width: 55%;"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          ce.co.accessPoint.create
        </h2>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 640px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="accessPointName-0"
                >
                  <label
                    class="bp3-label"
                    for="accessPointName"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_accessPointName"
                    >
                      ce.co.accessPoint.enterDomain
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="accessPointName"
                        placeholder="ce.co.accessPoint.domainName"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-disabled radioFont"
                      data-id="albSelector-1"
                      style="font-size: 24px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="radioFont"
                        >
                          <label
                            class="bp3-control bp3-radio bp3-disabled bp3-inline Radio--radio"
                          >
                            <input
                              disabled=""
                              name="albSelector"
                              type="radio"
                              value="new"
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            ce.co.accessPoint.createNewALB
                          </label>
                          <label
                            class="bp3-control bp3-radio bp3-disabled bp3-inline Radio--radio"
                          >
                            <input
                              disabled=""
                              name="albSelector"
                              type="radio"
                              value=""
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="apCores-2"
                      style="width: 220px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="apCores"
                                placeholder="ce.co.accessPoint.select.existingALB"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="certificate-3"
                >
                  <label
                    class="bp3-label"
                    for="certificate"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_certificate"
                    >
                      ce.co.accessPoint.select.aCertificate
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="certificate"
                            placeholder="ce.co.accessPoint.select.certificate"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="securityGroups-4"
                >
                  <label
                    class="bp3-label"
                    for="securityGroups"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_securityGroups"
                    >
                      ce.co.accessPoint.select.securityGroups
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                name="securityGroups"
                                placeholder="Search..."
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  style="position: absolute; bottom: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    ce.co.accessPoint.proceed
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Access Point Wizard Tests renders without crashing 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-aws"
        >
          <svg
            height="40"
            viewBox="0 0 14 10"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
              fill="#252f3e"
            />
            <g
              fill="#f90"
            >
              <path
                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
              />
              <path
                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Create New Access Point
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.create
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          ce.co.accessPoint.mapDomain
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-large"
        style="min-height: 640px; width: 55%;"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          ce.co.accessPoint.create
        </h2>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 640px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="accessPointName-0"
                >
                  <label
                    class="bp3-label"
                    for="accessPointName"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_accessPointName"
                    >
                      ce.co.accessPoint.enterDomain
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="accessPointName"
                        placeholder="ce.co.accessPoint.domainName"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-1"
                >
                  <label
                    class="bp3-label"
                  >
                    ce.co.accessPoint.select.connector
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-cloudConnector"
                      style="width: 400px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          ce.co.accessPoint.select.account
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="accessPointRegion-2"
                >
                  <label
                    class="bp3-label"
                    for="accessPointRegion"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_accessPointRegion"
                    >
                      ce.co.accessPoint.select.regionToInstall
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="accessPointRegion"
                            placeholder="pipeline.regionPlaceholder"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-disabled radioFont"
                      data-id="albSelector-3"
                      style="font-size: 24px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="radioFont"
                        >
                          <label
                            class="bp3-control bp3-radio bp3-disabled bp3-inline Radio--radio"
                          >
                            <input
                              disabled=""
                              name="albSelector"
                              type="radio"
                              value="new"
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            ce.co.accessPoint.createNewALB
                          </label>
                          <label
                            class="bp3-control bp3-radio bp3-disabled bp3-inline Radio--radio"
                          >
                            <input
                              disabled=""
                              name="albSelector"
                              type="radio"
                              value=""
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                            
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="apCores-4"
                      style="width: 220px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="apCores"
                                placeholder="ce.co.accessPoint.select.existingALB"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="certificate-5"
                >
                  <label
                    class="bp3-label"
                    for="certificate"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_certificate"
                    >
                      ce.co.accessPoint.select.aCertificate
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="certificate"
                            placeholder="ce.co.accessPoint.select.certificate"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="vpc-6"
                >
                  <label
                    class="bp3-label"
                    for="vpc"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_vpc"
                    >
                      ce.co.accessPoint.select.vpc
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="vpc"
                            placeholder="ce.co.accessPoint.select.vpc"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="securityGroups-7"
                >
                  <label
                    class="bp3-label"
                    for="securityGroups"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="createAccessPt_securityGroups"
                    >
                      ce.co.accessPoint.select.securityGroups
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                name="securityGroups"
                                placeholder="Search..."
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  style="position: absolute; bottom: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    ce.co.accessPoint.proceed
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
